@@ -106,7 +106,8 @@ class MinMarginEvaluatorTest {
         when(marginEvaluator.getMargin(flowResult, mnec2, MEGAWATT)).thenReturn(200.);
 
         minMarginEvaluator = new MinMarginEvaluator(Set.of(mnec1, mnec2), MEGAWATT, marginEvaluator);
-        assertEquals(-2000, minMarginEvaluator.evaluate(flowResult, null, ReportNode.NO_OP).getCost(Set.of(), Set.of()), DOUBLE_TOLERANCE);
+        // no optimized cnec is present, the default value is returned
+        assertEquals(-1e9, minMarginEvaluator.evaluate(flowResult, null, ReportNode.NO_OP).getCost(Set.of(), Set.of()), DOUBLE_TOLERANCE);
     }
 
     private void mockCnecThresholds(FlowCnec cnec, double threshold) {
@@ -121,6 +122,14 @@ class MinMarginEvaluatorTest {
         mockCnecThresholds(cnec2, 2000);
         mockCnecThresholds(cnec3, 3000);
         mockCnecThresholds(pureMnec, 4000);
-        assertEquals(-4000., minMarginEvaluator.evaluate(flowResult, null, ReportNode.NO_OP).getCost(Set.of(), Set.of()), DOUBLE_TOLERANCE);
+        // no optimized cnec is present, the default value is returned
+        assertEquals(-1e9, minMarginEvaluator.evaluate(flowResult, null, ReportNode.NO_OP).getCost(Set.of(), Set.of()), DOUBLE_TOLERANCE);
+    }
+
+    // same test as in MinMarginViolationEvaluatorTest but capAtZero is false
+    @Test
+    void testNoCnecs() {
+        MinMarginEvaluator emptyEvaluator = new MinMarginEvaluator(Collections.emptySet(), MEGAWATT, Mockito.mock(MarginEvaluator.class));
+        assertEquals(-1e9, emptyEvaluator.evaluate(Mockito.mock(FlowResult.class), null, ReportNode.NO_OP).getCost(Set.of(), Set.of()), DOUBLE_TOLERANCE);
     }
 }
